Prevented the camera from flipping on mobile devices

--- a/showroom.css
+++ b/showroom.css
@@ -13,6 +13,10 @@
     display: none !important;
 }
 
+.view-buttons {
+    margin: 0 auto;
+}
+
 body {
     background: linear-gradient(90deg, rgba(51,51,51,1) 9%, rgba(87,85,92,1) 42%, rgba(165,158,181,1) 100%);
 }
